# susumu_agent

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.py  camera.py  capabilities.py  config.yaml  design.md  macro_store.py  main.py  package.xml  pyproject.toml  requirements.txt  session_store.py  setup.cfg  setup.py  shared_state.py  tools.py  watchdog.py
deploy/: install.sh  robot-nl.service  secrets.env.example
docs/: ADK.md  Design.md  MovementExpressions.md
launch/: gui.launch.py  mock.launch.py  mock_debug.launch.py  real.launch.py  real_debug.launch.py  robot_nl.launch.py  robot_nl_simulate.launch.py  turtlesim.launch.py  turtlesim_debug.launch.py  turtlesim_demo.launch.py  turtlesim_demo_debug.launch.py
robot/: interface.py  mock_robot.py  ros2_robot.py
susumu_agent/: __main__.py  agent.py  camera.py  capabilities.py  debug_tools.py  demo_node.py  macro_store.py  main.py  ros_logger.py  session_store.py  shared_state.py  tools.py  turtlesim_recorder.py  watchdog.py
susumu_agent/agent/: factory.py  prompt.py  tools.py
susumu_agent/business/: capabilities.py  movement_expressions.py  shared_state.py  watchdog.py
susumu_agent/cli/: debug_tools.py  main.py
susumu_agent/demo/: command_publisher.py  commands.py  demo_node.py
susumu_agent/gui/: input_panel.py
susumu_agent/logging/: ros_logger.py
susumu_agent/robot/: interface.py  mock_robot.py  ros2_robot.py
susumu_agent/sensors/: camera.py
susumu_agent/storage/: session_store.py
susumu_agent/voice/: recognizer.py  synthesizer.py
tests/: test_capabilities.py  test_debug_tools.py  test_movement_expressions.py  test_tools_sequence_state.py
tests/unit/: test_capabilities.py
voice/: recognizer.py  synthesizer.py
