[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "susumu-agent"
version = "0.0.0"
description = "自然言語でロボットを制御するシステム（Google ADK + Gemini / Claude on Vertex AI）"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.1.0,<3.0.0",
    "anthropic[vertex]>=0.50.0,<1.0.0",
    "google-cloud-aiplatform>=1.90.0,<2.0.0",
    "opencv-python>=4.9.0,<5.0.0",
    "pyyaml>=6.0,<7.0",
    "loguru>=0.7.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
susumu_agent_node  = "susumu_agent.main:main_entry"
susumu_agent_debug = "susumu_agent.debug_tools:main"
susumu_agent_demo  = "susumu_agent.demo_node:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
